Add: socket io to client

--- a/public/client.html
+++ b/public/client.html
@@ -143,6 +143,7 @@
 			text-align: center;
 		}
 	</style>
+	<script src="/socket.io/socket.io.js"></script>
 	<script src="./js/client.js"></script>
 </body>
 
