Added pay button

--- a/public/client.html
+++ b/public/client.html
@@ -12,7 +12,7 @@
 <body>
 	<!-- create restaurant menu with many products and prices in table format with checkboxes-->
 
-	<section class="section is-flex" id="food-section">
+	<section class="section container is-flex" id="food-section">
 		<div class="container">
 			<h1 class="title">Comidas</h1>
 			<table class="table">
@@ -132,6 +132,7 @@
 
 	<div class="has-text-centered is-family-primary is-size-5 ">
 		<button class=" button is-success" style="margin-top:50px;" id="submit-button">Pedir</button>
+		<button class=" button is-info" style="margin-top:50px;" id="pay-button">Pagar</button>
 		<p id="total-price">Precio Total: $0</p>
 	</div>
 
